<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movies_title"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/movie_list_hint" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerMovies"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/buttonBookedTickets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/view_booked_tickets" />

    <Button
        android:id="@+id/buttonLogoutFromMovies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout" />
</LinearLayout>
