<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/booked_tickets_title"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textEmptyTickets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/no_booked_tickets"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerTickets"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/buttonBackToMoviesFromTickets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_to_movies" />
</LinearLayout>
